# gitignore-cli

./: .gitignore  Cargo.toml  Makefile  README.md  plugin.zsh
src/: main.rs
