[package]
name = "gitignore_templates"
version = "0.1.0"
authors = ["Anatoliy Platonov <p4m.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
futures = "0.3"
tokio = "0.3.5"
dirs = "3.0.2"
